trunk/Archive/b100f5316907730e48c240ca775f4392-f674c1a6d04c632b71a62362c0ccfc51/output
+ g++ -std=c++11 -O2 -Wall -pedantic -pthread main.cpp
main.cpp: In function ‘int main()’:
main.cpp:7:19: error: no matching function for call to ‘operator new(sizetype, item*)’
     new (&i) item();
                   ^
main.cpp:7:19: note: candidate is:
<built-in>:0:0: note: void* operator new(long unsigned int)
<built-in>:0:0: note:   candidate expects 1 argument, 2 provided
